--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,11 +23,13 @@ body {
 	background: white;
 	#logo {
 		float: left;
-		p {
+		a {
 			text-transform: uppercase;
 			font-weight: 700;
 			letter-spacing: -1px;
 			font-size: 1.2rem;
+			text-decoration: none;
+			color: #397CAC;
 		}
 	}
 	#buttons {
@@ -67,5 +69,23 @@ body {
 			font-size: 0.9rem;
 			color: #B2BAC2;
 		}
+	}
+}
+
+#post_content {
+	background: white;
+	padding: 2em 5%;
+	border-radius: .5em;
+	h1 {
+		font-weight: 100;
+		font-size: 2em;
+		color: #397CAC;
+		margin-top: 0;
+	}
+	p {
+		color: #B2BAC2;
+		font-size: 0.9rem;
+		font-weight: 100;
+		line-height: 1.5;
 	}
 }
