--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,9 +1,15 @@
-%h1= @post.title
+#post_content
+  %h1= @post.title
+  %p= @post.content
 
-%p= @post.content
+  #comments
+    %h2= @post.comments.count
+    = render @post.comments
 
-= link_to "Edit Post", edit_post_path(@post)
+    %h3 Reply to thread
+    = render "comments/form"
 
-= link_to "Delete Post", post_path(@post), method: :delete, data: { confirm: "Are you sure" }
 
-= link_to "Home", root_path
+  = link_to "Edit", edit_post_path(@post)
+  = link_to "Delete", post_path(@post), method: :delete, data: { confirm: "Sure" }
+  = link_to "Home", root_path
